; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_3.c_fatal.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_3.c_fatal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@parent = common dso_local global i32 0, align 4
@SIGKILL = common dso_local global i32 0, align 4
@child = common dso_local global i32 0, align 4
@victim = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fatal(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @perror(i8* %3)
  %5 = load i32, i32* @parent, align 4
  %6 = load i32, i32* @SIGKILL, align 4
  %7 = call i32 @kill(i32 %5, i32 %6)
  %8 = load i32, i32* @child, align 4
  %9 = load i32, i32* @SIGKILL, align 4
  %10 = call i32 @kill(i32 %8, i32 %9)
  %11 = load i32, i32* @victim, align 4
  %12 = load i32, i32* @SIGKILL, align 4
  %13 = call i32 @kill(i32 %11, i32 %12)
  ret void
}

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @kill(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
